--- a/locale/en/LC_MESSAGES/nvda.po
+++ b/locale/en/LC_MESSAGES/nvda.po
@@ -1,11 +1,11 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: gestureDuplicate 1.0\n"
+"Project-Id-Version: Duplicate Gestures\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-11 13:09+0700\n"
-"PO-Revision-Date: 2025-12-11 08:25+0700\n"
-"Last-Translator: Automatically generated <>\n"
-"Language-Team: English\n"
+"POT-Creation-Date: 2026-01-05 12:00+0700\n"
+"PO-Revision-Date: 2026-01-05 17:01+0700\n"
+"Last-Translator: \n"
+"Language-Team: English <en@li.org>\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -13,82 +13,134 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 3.7\n"
 
-#: __init__.py:38
-msgid "Duplicate Gestures"
-msgstr "Duplicate Gestures"
-
-#: __init__.py:51
-msgid "Select a duplicate gesture and use the buttons or context menu to manage it."
-msgstr "Select a duplicate gesture and use the buttons or context menu to manage it."
-
-#: __init__.py:57
-msgid "Found {} duplicate gestures"
-msgstr "Found {} duplicate gestures"
-
-#: __init__.py:62
-msgid "Duplicate gestures:"
-msgstr "Duplicate gestures:"
-
-#: __init__.py:74
-msgid "Gesture"
-msgstr "Gesture"
-
-#: __init__.py:75
-msgid "Function"
-msgstr "Function"
-
-#: __init__.py:76
-msgid "Category/Context"
-msgstr "Category/Context"
-
-#: __init__.py:82
-msgid "Note: Gestures are checked from all contexts (global and application-specific)."
-msgstr "Note: Gestures are checked from all contexts (global and application-specific)."
-
-#: __init__.py:89
-msgid "&Delete Gesture"
-msgstr "&Delete Gesture"
-
-#: __init__.py:94
-msgid "&Edit in Input Gestures..."
-msgstr "&Edit in Input Gestures..."
-
-#: __init__.py:99
-msgid "&Close"
-msgstr "&Close"
-
-#: __init__.py:117
-msgid "No duplicate gestures found"
-msgstr "No duplicate gestures found"
-
-#: __init__.py:297
-msgid "Are you sure you want to delete the gesture '{gesture}' for the function '{function}' in context '{context}'?"
-msgstr "Are you sure you want to delete the gesture '{gesture}' for the function '{function}' in context '{context}'?"
-
-#: __init__.py:309
-msgid "Gesture '{gesture}' deleted successfully."
-msgstr "Gesture '{gesture}' deleted successfully."
-
-#: __init__.py:315
-msgid "Error: Cannot delete the gesture. (May be a non-customizable default gesture)"
-msgstr "Error: Cannot delete the gesture. (May be a non-customizable default gesture)"
-
-#: __init__.py:335
-msgid "Cannot open Input Gestures dialog. NVDA's Input Gestures dialog module is missing."
-msgstr "Cannot open Input Gestures dialog. NVDA's Input Gestures dialog module is missing."
-
-#: __init__.py:340
-msgid "Cannot open Input Gestures dialog"
-msgstr "Cannot open Input Gestures dialog"
-
-#: __init__.py:362
+#: __init__.py:28
 msgid "&Check Duplicate Gestures"
 msgstr "&Check Duplicate Gestures"
 
-#: __init__.py:481
-msgid "Check for duplicate input gestures"
-msgstr "Check for duplicate input gestures"
+#: __init__.py:31
+msgid "&My Gestures Management"
+msgstr "&My Gestures Management"
 
-#: __init__.py:507
-msgid "Error checking for duplicate gestures"
-msgstr "Error checking for duplicate gestures"
+#: __init__.py:44
+msgid "Check for duplicate input gestures (single tap), My Gestures Management (double tap)"
+msgstr "Check for duplicate input gestures (single tap), My Gestures Management (double tap)"
+
+#: __init__.py:58
+msgid "My Gestures Management (single tap), Check Duplicate Gestures (double tap)"
+msgstr "My Gestures Management (single tap), Check Duplicate Gestures (double tap)"
+
+#: CheckDuplicateGestures.py:41
+msgid "Duplicate Gestures"
+msgstr "Duplicate Gestures"
+
+#: CheckDuplicateGestures.py:47
+msgid "Found {} duplicate entries. Select an item and click 'Open' to fix."
+msgstr "Found {} duplicate entries. Select an item and click 'Open' to fix."
+
+#: CheckDuplicateGestures.py:58 mygesturesManagement.py:70
+msgid "Gesture"
+msgstr "Gesture"
+
+#: CheckDuplicateGestures.py:59 mygesturesManagement.py:71
+msgid "Function"
+msgstr "Function"
+
+#: CheckDuplicateGestures.py:60 mygesturesManagement.py:72
+msgid "Context"
+msgstr "Context"
+
+#: CheckDuplicateGestures.py:67
+msgid "&Open Input Gestures"
+msgstr "&Open Input Gestures"
+
+#: CheckDuplicateGestures.py:69 mygesturesManagement.py:83
+msgid "&Close"
+msgstr "&Close"
+
+#: CheckDuplicateGestures.py:119
+msgid "Unknown"
+msgstr "Unknown"
+
+#: CheckDuplicateGestures.py:123
+msgid "Application: "
+msgstr "Application: "
+
+#: CheckDuplicateGestures.py:170
+msgid "Input gestures dialog opened. Navigate with arrow keys to see Add and Remove buttons."
+msgstr "Input gestures dialog opened. Navigate with arrow keys to see Add and Remove buttons."
+
+#: CheckDuplicateGestures.py:176
+msgid "Failed to open Input Gestures dialog"
+msgstr "Failed to open Input Gestures dialog"
+
+#: mygesturesManagement.py:38
+msgid "My Gestures Management"
+msgstr "My Gestures Management"
+
+#: mygesturesManagement.py:50
+msgid "Clean up gestures for uninstalled addons from gestures.ini:"
+msgstr "Clean up gestures for uninstalled addons from gestures.ini:"
+
+#: mygesturesManagement.py:56
+msgid "Addon name:"
+msgstr "Addon name:"
+
+#: mygesturesManagement.py:79
+msgid "&Remove addon"
+msgstr "&Remove addon"
+
+#: mygesturesManagement.py:81
+msgid "C&lear All"
+msgstr "C&lear All"
+
+#: mygesturesManagement.py:202
+msgid "&Remove Selected"
+msgstr "&Remove Selected"
+
+#: mygesturesManagement.py:247
+msgid ""
+"Remove this custom gesture for addon '{}'?\n"
+"\n"
+"Gesture: {}\n"
+"Function: {}"
+msgstr ""
+"Remove this custom gesture for addon '{}'?\n"
+"\n"
+"Gesture: {}\n"
+"Function: {}"
+
+#: mygesturesManagement.py:249 mygesturesManagement.py:312
+msgid "Confirm"
+msgstr "Confirm"
+
+#: mygesturesManagement.py:261 mygesturesManagement.py:330
+msgid "Success"
+msgstr "Success"
+
+#: mygesturesManagement.py:265
+msgid "Failed to remove gesture from configuration."
+msgstr "Failed to remove gesture from configuration."
+
+#: mygesturesManagement.py:268
+msgid "Failed to remove gesture."
+msgstr "Failed to remove gesture."
+
+#: mygesturesManagement.py:293
+msgid "Remove all {} custom gestures for addon '{}'?"
+msgstr "Remove all {} custom gestures for addon '{}'?"
+
+#: mygesturesManagement.py:309
+msgid "Remove all {} custom gestures from {} addons?"
+msgstr "Remove all {} custom gestures from {} addons?"
+
+#: mygesturesManagement.py:324
+msgid "No addon gestures to clear."
+msgstr "No addon gestures to clear."
+
+#: mygesturesManagement.py:334
+msgid "Failed to clear gestures from configuration."
+msgstr "Failed to clear gestures from configuration."
+
+#: mygesturesManagement.py:337
+msgid "Error during mass deletion."
+msgstr "Error during mass deletion."
