--- a/locale/ru/LC_MESSAGES/nvda.po
+++ b/locale/ru/LC_MESSAGES/nvda.po
@@ -1,74 +1,146 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: gestureDuplicate 1.0\n"
+"Project-Id-Version: Duplicate Gestures\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-11 13:09+0700\n"
-"PO-Revision-Date: 2025-12-11 16:24+0700\n"
-"Last-Translator: Automatically generated <>\n"
-"Language-Team: Russian\n"
+"POT-Creation-Date: 2026-01-05 12:00+0700\n"
+"PO-Revision-Date: 2026-01-05 17:09+0700\n"
+"Last-Translator: \n"
+"Language-Team: Russian <ru@li.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Manual extraction\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Poedit 3.7\n"
 
-#: __init__.py:38
-msgid "Duplicate Gestures"
-msgstr "Дублирующиеся жесты"
-
-#: __init__.py:51
-msgid "Select a duplicate gesture and use the buttons or context menu to manage it."
-msgstr "Выберите дублирующийся жест и используйте кнопки или контекстное меню для управления."
-
-#: __init__.py:57
-msgid "Found {} duplicate gestures"
-msgstr "Найдено дублирующихся жестов: {}"
-
-#: __init__.py:62
-msgid "Duplicate gestures:"
-msgstr "Дублирующиеся жесты:"
-
-#: __init__.py:74
-msgid "Gesture"
-msgstr "Жест"
-
-#: __init__.py:75
-msgid "Function"
-msgstr "Функция"
-
-#: __init__.py:76
-msgid "Category/Context"
-msgstr "Категория/Контекст"
-
-#: __init__.py:89
-msgid "&Delete Gesture"
-msgstr "&Удалить жест"
-
-#: __init__.py:94
-msgid "&Edit in Input Gestures..."
-msgstr "&Редактировать в диалоге жестов ввода…"
-
-#: __init__.py:99
-msgid "&Close"
-msgstr "&Закрыть"
-
-#: __init__.py:117
-msgid "No duplicate gestures found"
-msgstr "Дублирующихся жестов не найдено"
-
-#: __init__.py:297
-msgid "Are you sure you want to delete the gesture '{gesture}' for the function '{function}' in context '{context}'?"
-msgstr "Вы уверены, что хотите удалить жест «{gesture}» функции «{function}» в контексте «{context}»?"
-
-#: __init__.py:309
-msgid "Gesture '{gesture}' deleted successfully."
-msgstr "Жест «{gesture}» успешно удалён."
-
-#: __init__.py:362
+#: __init__.py:28
 msgid "&Check Duplicate Gestures"
-msgstr "&Проверить дублирующиеся жесты"
+msgstr "&????????? ????????????? ?????"
 
-#: __init__.py:481
-msgid "Check for duplicate input gestures"
-msgstr "Проверить дублирующиеся жесты ввода"
+#: __init__.py:31
+msgid "&My Gestures Management"
+msgstr "&?????????? ????? ???????"
+
+#: __init__.py:44
+msgid "Check for duplicate input gestures (single tap), My Gestures Management (double tap)"
+msgstr "????????? ????????????? ????? ????? (???? ???????), ?????????? ????? ??????? (??????? ???????)"
+
+#: __init__.py:58
+msgid "My Gestures Management (single tap), Check Duplicate Gestures (double tap)"
+msgstr "?????????? ????? ??????? (???? ???????), ????????? ????????????? ????? (??????? ???????)"
+
+#: CheckDuplicateGestures.py:41
+msgid "Duplicate Gestures"
+msgstr "????????????? ?????"
+
+#: CheckDuplicateGestures.py:47
+msgid "Found {} duplicate entries. Select an item and click 'Open' to fix."
+msgstr "??????? {} ????????????? ???????. ???????? ??????? ? ??????? ????????? ??? ???????????."
+
+#: CheckDuplicateGestures.py:58 mygesturesManagement.py:70
+msgid "Gesture"
+msgstr "????"
+
+#: CheckDuplicateGestures.py:59 mygesturesManagement.py:71
+msgid "Function"
+msgstr "???????"
+
+#: CheckDuplicateGestures.py:60 mygesturesManagement.py:72
+msgid "Context"
+msgstr "????????"
+
+#: CheckDuplicateGestures.py:67
+msgid "&Open Input Gestures"
+msgstr "&??????? ????? ?????"
+
+#: CheckDuplicateGestures.py:69 mygesturesManagement.py:83
+msgid "&Close"
+msgstr "&???????"
+
+#: CheckDuplicateGestures.py:119
+msgid "Unknown"
+msgstr "??????????"
+
+#: CheckDuplicateGestures.py:123
+msgid "Application: "
+msgstr "??????????: "
+
+#: CheckDuplicateGestures.py:170
+msgid "Input gestures dialog opened. Navigate with arrow keys to see Add and Remove buttons."
+msgstr "?????? ?????? ????? ??????. ??????????? ??????? ?? ?????????, ????? ??????? ?????? ?????????? ? ?????????."
+
+#: CheckDuplicateGestures.py:176
+msgid "Failed to open Input Gestures dialog"
+msgstr "?? ??????? ??????? ?????? ?????? ?????"
+
+#: mygesturesManagement.py:38
+msgid "My Gestures Management"
+msgstr "?????????? ????? ???????"
+
+#: mygesturesManagement.py:50
+msgid "Clean up gestures for uninstalled addons from gestures.ini:"
+msgstr "???????? ????? ?? ????????? ?????????? ? ????? gestures.ini:"
+
+#: mygesturesManagement.py:56
+msgid "Addon name:"
+msgstr "???????? ??????????:"
+
+#: mygesturesManagement.py:79
+msgid "&Remove addon"
+msgstr "&??????? ??????????"
+
+#: mygesturesManagement.py:81
+msgid "C&lear All"
+msgstr "&???????? ???"
+
+#: mygesturesManagement.py:202
+msgid "&Remove Selected"
+msgstr "&??????? ?????????"
+
+#: mygesturesManagement.py:247
+msgid ""
+"Remove this custom gesture for addon '{}'?\n"
+"\n"
+"Gesture: {}\n"
+"Function: {}"
+msgstr ""
+"??????? ???? ???????????????? ???? ??? ?????????? '{}'?\n"
+"\n"
+"????: {}\n"
+"???????: {}"
+
+#: mygesturesManagement.py:249 mygesturesManagement.py:312
+msgid "Confirm"
+msgstr "???????????"
+
+#: mygesturesManagement.py:261 mygesturesManagement.py:330
+msgid "Success"
+msgstr "???????"
+
+#: mygesturesManagement.py:265
+msgid "Failed to remove gesture from configuration."
+msgstr "?? ??????? ??????? ???? ?? ????????????."
+
+#: mygesturesManagement.py:268
+msgid "Failed to remove gesture."
+msgstr "?? ??????? ??????? ????."
+
+#: mygesturesManagement.py:293
+msgid "Remove all {} custom gestures for addon '{}'?"
+msgstr "??????? ??? {} ???????????????? ?????? ??? ?????????? '{}'?"
+
+#: mygesturesManagement.py:309
+msgid "Remove all {} custom gestures from {} addons?"
+msgstr "??????? ??? {} ???????????????? ?????? ?? {} ???????????"
+
+#: mygesturesManagement.py:324
+msgid "No addon gestures to clear."
+msgstr "??? ?????? ?????????? ??? ???????."
+
+#: mygesturesManagement.py:334
+msgid "Failed to clear gestures from configuration."
+msgstr "?? ??????? ???????? ????? ?? ????????????."
+
+#: mygesturesManagement.py:337
+msgid "Error during mass deletion."
+msgstr "?????? ??? ???????? ????????."
