--- a/locale/es/LC_MESSAGES/nvda.po
+++ b/locale/es/LC_MESSAGES/nvda.po
@@ -1,74 +1,146 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: gestureDuplicate 1.0\n"
+"Project-Id-Version: Duplicate Gestures\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-11 13:09+0700\n"
-"PO-Revision-Date: 2025-12-11 16:24+0700\n"
-"Last-Translator: Automatically generated <>\n"
-"Language-Team: Spanish\n"
+"POT-Creation-Date: 2026-01-05 12:00+0700\n"
+"PO-Revision-Date: 2026-01-05 17:04+0700\n"
+"Last-Translator: \n"
+"Language-Team: Spanish <es@li.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Manual extraction\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.7\n"
 
-#: __init__.py:38
+#: __init__.py:28
+msgid "&Check Duplicate Gestures"
+msgstr "&Comprobar gestos duplicados"
+
+#: __init__.py:31
+msgid "&My Gestures Management"
+msgstr "&Gesti?n de mis gestos"
+
+#: __init__.py:44
+msgid "Check for duplicate input gestures (single tap), My Gestures Management (double tap)"
+msgstr "Comprobar gestos de entrada duplicados (toque simple), Gesti?n de mis gestos (doble toque)"
+
+#: __init__.py:58
+msgid "My Gestures Management (single tap), Check Duplicate Gestures (double tap)"
+msgstr "Gesti?n de mis gestos (toque simple), Comprobar gestos duplicados (doble toque)"
+
+#: CheckDuplicateGestures.py:41
 msgid "Duplicate Gestures"
 msgstr "Gestos duplicados"
 
-#: __init__.py:51
-msgid "Select a duplicate gesture and use the buttons or context menu to manage it."
-msgstr "Seleccione un gesto duplicado y utilice los botones o el menú contextual para gestionarlo."
+#: CheckDuplicateGestures.py:47
+msgid "Found {} duplicate entries. Select an item and click 'Open' to fix."
+msgstr "Se encontraron {} entradas duplicadas. Seleccione un elemento y haga clic en 'Abrir' para corregir."
 
-#: __init__.py:57
-msgid "Found {} duplicate gestures"
-msgstr "Se encontraron {} gestos duplicados"
-
-#: __init__.py:62
-msgid "Duplicate gestures:"
-msgstr "Gestos duplicados:"
-
-#: __init__.py:74
+#: CheckDuplicateGestures.py:58 mygesturesManagement.py:70
 msgid "Gesture"
 msgstr "Gesto"
 
-#: __init__.py:75
+#: CheckDuplicateGestures.py:59 mygesturesManagement.py:71
 msgid "Function"
-msgstr "Función"
+msgstr "Funci?n"
 
-#: __init__.py:76
-msgid "Category/Context"
-msgstr "Categoría/Contexto"
+#: CheckDuplicateGestures.py:60 mygesturesManagement.py:72
+msgid "Context"
+msgstr "Contexto"
 
-#: __init__.py:89
-msgid "&Delete Gesture"
-msgstr "&Eliminar gesto"
+#: CheckDuplicateGestures.py:67
+msgid "&Open Input Gestures"
+msgstr "&Abrir gestos de entrada"
 
-#: __init__.py:94
-msgid "&Edit in Input Gestures..."
-msgstr "&Editar en Gestos de entrada…"
-
-#: __init__.py:99
+#: CheckDuplicateGestures.py:69 mygesturesManagement.py:83
 msgid "&Close"
 msgstr "&Cerrar"
 
-#: __init__.py:117
-msgid "No duplicate gestures found"
-msgstr "No se encontraron gestos duplicados"
+#: CheckDuplicateGestures.py:119
+msgid "Unknown"
+msgstr "Desconocido"
 
-#: __init__.py:297
-msgid "Are you sure you want to delete the gesture '{gesture}' for the function '{function}' in context '{context}'?"
-msgstr "¿Está seguro de que desea eliminar el gesto «{gesture}» de la función «{function}» en el contexto «{context}»?"
+#: CheckDuplicateGestures.py:123
+msgid "Application: "
+msgstr "Aplicaci?n: "
 
-#: __init__.py:309
-msgid "Gesture '{gesture}' deleted successfully."
-msgstr "El gesto «{gesture}» se eliminó correctamente."
+#: CheckDuplicateGestures.py:170
+msgid "Input gestures dialog opened. Navigate with arrow keys to see Add and Remove buttons."
+msgstr "Di?logo de gestos de entrada abierto. Navegue con las teclas de flecha para ver los botones A?adir y Eliminar."
 
-#: __init__.py:362
-msgid "&Check Duplicate Gestures"
-msgstr "&Buscar gestos duplicados"
+#: CheckDuplicateGestures.py:176
+msgid "Failed to open Input Gestures dialog"
+msgstr "No se pudo abrir el di?logo de gestos de entrada"
 
-#: __init__.py:481
-msgid "Check for duplicate input gestures"
-msgstr "Buscar gestos de entrada duplicados"
+#: mygesturesManagement.py:38
+msgid "My Gestures Management"
+msgstr "Gesti?n de mis gestos"
+
+#: mygesturesManagement.py:50
+msgid "Clean up gestures for uninstalled addons from gestures.ini:"
+msgstr "Limpiar gestos de complementos desinstalados desde gestures.ini:"
+
+#: mygesturesManagement.py:56
+msgid "Addon name:"
+msgstr "Nombre del complemento:"
+
+#: mygesturesManagement.py:79
+msgid "&Remove addon"
+msgstr "&Eliminar complemento"
+
+#: mygesturesManagement.py:81
+msgid "C&lear All"
+msgstr "&Borrar todo"
+
+#: mygesturesManagement.py:202
+msgid "&Remove Selected"
+msgstr "&Eliminar seleccionado"
+
+#: mygesturesManagement.py:247
+msgid ""
+"Remove this custom gesture for addon '{}'?\n"
+"\n"
+"Gesture: {}\n"
+"Function: {}"
+msgstr ""
+"?Eliminar este gesto personalizado para el complemento '{}'?\n"
+"\n"
+"Gesto: {}\n"
+"Funci?n: {}"
+
+#: mygesturesManagement.py:249 mygesturesManagement.py:312
+msgid "Confirm"
+msgstr "Confirmar"
+
+#: mygesturesManagement.py:261 mygesturesManagement.py:330
+msgid "Success"
+msgstr "?xito"
+
+#: mygesturesManagement.py:265
+msgid "Failed to remove gesture from configuration."
+msgstr "No se pudo eliminar el gesto de la configuraci?n."
+
+#: mygesturesManagement.py:268
+msgid "Failed to remove gesture."
+msgstr "No se pudo eliminar el gesto."
+
+#: mygesturesManagement.py:293
+msgid "Remove all {} custom gestures for addon '{}'?"
+msgstr "?Eliminar los {} gestos personalizados del complemento '{}'?"
+
+#: mygesturesManagement.py:309
+msgid "Remove all {} custom gestures from {} addons?"
+msgstr "?Eliminar los {} gestos personalizados de {} complementos?"
+
+#: mygesturesManagement.py:324
+msgid "No addon gestures to clear."
+msgstr "No hay gestos de complementos para eliminar."
+
+#: mygesturesManagement.py:334
+msgid "Failed to clear gestures from configuration."
+msgstr "No se pudieron eliminar los gestos de la configuraci?n."
+
+#: mygesturesManagement.py:337
+msgid "Error during mass deletion."
+msgstr "Error durante la eliminaci?n masiva."
